force-app/main/default/objects/Opportunity/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <label>Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>