force-app/main/default/objects/Opportunity/fields/ROICase__c.field-meta.xml
<CustomField>
    <fullName>ROICase__c</fullName>
    <inlineHelpText>If Yes, you can add the doc in attachment if requested by your manager.
If No, please explain in few Words the Proof of Value</inlineHelpText>
    <label>ROI case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>