force-app/main/default/objects/Opportunity/fields/SDRName__c.field-meta.xml
<CustomField>
    <fullName>SDRName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>