force-app/main/default/objects/Opportunity/fields/SecurityContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SecurityContactEmail__c</fullName>
    <formula>ValidatedQuote__r.SecurityContactEmail__c</formula>
    <label>Security Contact Email</label>
    <type>Text</type>
</CustomField>