force-app/main/default/objects/Opportunity/fields/SecurityProcess__c.field-meta.xml
<CustomField>
    <fullName>SecurityProcess__c</fullName>
    <inlineHelpText>Outline detailed security process, including security contact name</inlineHelpText>
    <label>Security process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>