force-app/main/default/objects/Opportunity/fields/SetNextFieldStatus__c.field-meta.xml
<CustomField>
    <fullName>SetNextFieldStatus__c</fullName>
    <formula>AND( 
    (OR( ISBLANK(NextStepsEntryDate__c), (TODAY() - NextStepsEntryDate__c) &gt; 7)), ((CloseDate - TODAY()) &lt; 60) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set Next Field Status</label>
    <type>Checkbox</type>
</CustomField>