force-app/main/default/objects/Opportunity/fields/TCVSaas__c.field-meta.xml
<CustomField>
    <fullName>TCVSaas__c</fullName>
    <description>Summarize Total Price of Products identified with Prdocut Family &quot;SaaS&quot; and &quot;SaaS Non Recurring&quot; (=Starter pack starting 2020 - CAP Edition Starter packs)</description>
    <inlineHelpText>Summarize Total Price of Products identified with Product Family &quot;SaaS&quot; and &quot;SaaS Non Recurring&quot; (=Starter pack starting 2020 - CAP Edition Starter packs)</inlineHelpText>
    <label>TCV SaaS</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>