force-app/main/default/objects/Opportunity/fields/TCVService__c.field-meta.xml
<CustomField>
    <fullName>TCVService__c</fullName>
    <description>Summarize Total Price of Products identified with Product Family &quot;Service&quot; + &quot;Recurring Services&quot; (Client Success program)</description>
    <inlineHelpText>Summarize Total Price of Products identified with Product Family &quot;Service&quot; + &quot;Recurring Services&quot; (Client Success program)</inlineHelpText>
    <label>TCV Service</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>