force-app/main/default/objects/Opportunity/fields/TotalPVPYUpToMil__c.field-meta.xml
<CustomField>
    <fullName>TotalPVPYUpToMil__c</fullName>
    <formula>ValidatedQuote__r.TotalPVPYUpToMil__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Previously called &quot;Page views per year PVPY (mil)&quot;. Indicate traffic sold in this opp in millions. E.g.:
One million = 1
Fifty million = 50</inlineHelpText>
    <label>Total PVPY up to (mil)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>