force-app/main/default/objects/Opportunity/fields/ValidatedQuote__c.field-meta.xml
<CustomField>
    <fullName>ValidatedQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Validated quote</description>
    <label>Validated Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>