force-app/main/default/objects/Opportunity/fields/ValidatedQuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>ValidatedQuoteNumber__c</fullName>
    <formula>ValidatedQuote__r.QuoteNumber</formula>
    <label>Validated Quote Number</label>
    <type>Text</type>
</CustomField>