force-app/main/default/objects/Opportunity/fields/WhyContentsquare__c.field-meta.xml
<CustomField>
    <fullName>WhyContentsquare__c</fullName>
    <description>Sales process release June 2019 ( note Estelle)</description>
    <inlineHelpText>Summarize in few words the context &gt; will be used for win report communication.</inlineHelpText>
    <label>Why Contentsquare?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>