force-app/main/default/objects/Opportunity/fields/WinReason__c.field-meta.xml
<CustomField>
    <fullName>WinReason__c</fullName>
    <inlineHelpText>Enter reasons why we have won this opportunity</inlineHelpText>
    <label>Win Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value - Democratization of insights</fullName>
            </value>
            <value>
                <fullName>Value - Speed to insights</fullName>
            </value>
            <value>
                <fullName>Value - Retroactive data / freedom from tagging</fullName>
            </value>
            <value>
                <fullName>Value - Solutions selling</fullName>
            </value>
            <value>
                <fullName>Functionality - Zoning</fullName>
            </value>
            <value>
                <fullName>Functionality - In-path Analysis</fullName>
            </value>
            <value>
                <fullName>Functionality - Heat Maps</fullName>
            </value>
            <value>
                <fullName>Functionality - Segmentation</fullName>
            </value>
            <value>
                <fullName>Company vision &amp; strategy</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>