force-app/main/default/objects/Opportunity/recordTypes/FastTrackOpportunity.recordType-meta.xml
<RecordType>
    <fullName>FastTrackOpportunity</fullName>
    <active>true</active>
    <businessProcess>FastTrack</businessProcess>
    <description>Opportunity with a short life cycle</description>
    <label>Fast track</label>
</RecordType>