force-app/main/default/objects/Opportunity/recordTypes/StandardOpportunity.recordType-meta.xml
<RecordType>
    <fullName>StandardOpportunity</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Opportunity with an entire sales cycle</description>
    <label>Standard</label>
</RecordType>