force-app/main/default/objects/Opportunity/validationRules/ACVnotEditableWhenQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>ACVnotEditableWhenQuote</fullName>
    <active>true</active>
    <errorConditionFormula>NumberOfQuotes__c  &gt;= 1 &amp;&amp;
ISCHANGED(ACV__c ) &amp;&amp; 
$Permission.ByPassVR = false</errorConditionFormula>
    <errorDisplayField>ACV__c</errorDisplayField>
    <errorMessage>You cannot modify the ACV as soon as a quote is linked to an opportunity</errorMessage>
</ValidationRule>