force-app/main/default/objects/Opportunity/validationRules/BlockS5ToS6WithoutROIProof.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockS5ToS6WithoutROIProof</fullName>
    <active>true</active>
    <description>You cannot move from S5 to S6 without filling out the ROI Case and Proof of Value.</description>
    <errorConditionFormula>AND($Permission.ByPassVR = false,
    ISPICKVAL(StageName, &quot;6- Preferred Vendor&quot;), 
    ISPICKVAL(PRIORVALUE(StageName), &quot;5- Value Proven&quot;),
    OR(
ISPICKVAL(ROICase__c, &quot;&quot;),
        ISBLANK(ProofOfValue__c)
    )
)</errorConditionFormula>
    <errorMessage>You cannot move from S5 to S6 without filling out the ROI Case and Proof of Value.</errorMessage>
</ValidationRule>