force-app/main/default/objects/Opportunity/validationRules/CheckDecisionMakerFromS4S5.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDecisionMakerFromS4S5</fullName>
    <active>true</active>
    <description>Ensure the decision maker is added.</description>
    <errorConditionFormula>AND($Permission.ByPassVR = false,
    ISPICKVAL(StageName, &quot;5- Value Proven&quot;),
    ISPICKVAL(PRIORVALUE(StageName), &quot;4- Selection Started&quot;),
    ISBLANK(DecisionMaker__c)
)</errorConditionFormula>
    <errorMessage>You must specify a Decision Maker before moving the opportunity from S4 to S5.</errorMessage>
</ValidationRule>