force-app/main/default/objects/Opportunity/validationRules/CloudAlliancesComment.validationRule-meta.xml
<ValidationRule>
    <fullName>CloudAlliancesComment</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Permission.ByPassVR = false,

 Ispickval(AlignmentWithCloud__c, &quot;Other&quot;), 

ISBLANK( AlignmentWithCloudComment__c ))</errorConditionFormula>
    <errorDisplayField>AlignmentWithCloudComment__c</errorDisplayField>
    <errorMessage>if “Alignment with Cloud”  = Other, a comment is mandatory</errorMessage>
</ValidationRule>