force-app/main/default/objects/Opportunity/validationRules/CloudAlliancesSubStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CloudAlliancesSubStatus</fullName>
    <active>true</active>
    <description>if “Alignment with Cloud”  = Yes, a Specific Cloud Sub Status is required</description>
    <errorConditionFormula>AND( $Permission.ByPassVR = false,
ISPICKVAL(AlignmentWithCloud__c, &quot;Yes&quot;),
ISBLANK(TEXT(  CloudAlliancesAWSSubStatus__c  )),
ISBLANK(TEXT(  CloudAlliancesMSFTSubStatus__c  )))</errorConditionFormula>
    <errorDisplayField>AlignmentWithCloud__c</errorDisplayField>
    <errorMessage>In case of Alignment with Cloud, a sub status is required</errorMessage>
</ValidationRule>