force-app/main/default/objects/Opportunity/validationRules/CloudAlliancesSubStatusEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>CloudAlliancesSubStatusEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

$Permission.ByPassVR = false,

OR(
ISPICKVAL(AlignmentWithCloud__c, &quot;No&quot;),
ISPICKVAL(AlignmentWithCloud__c, &quot;GCP&quot;)),



OR(
NOT(ISPICKVAL(CloudAlliancesAWSSubStatus__c,&quot;&quot;)),
NOT(ISPICKVAL( CloudAlliancesMSFTSubStatus__c, &quot;&quot;))
)




)</errorConditionFormula>
    <errorDisplayField>AlignmentWithCloud__c</errorDisplayField>
    <errorMessage>if “Alignment with Cloud”  = No or GCP, Specific Cloud Sub Status must be empty</errorMessage>
</ValidationRule>