force-app/main/default/objects/Opportunity/validationRules/EnforceMainCompetitorWhenMovingToS7.validationRule-meta.xml
<ValidationRule>
    <fullName>EnforceMainCompetitorWhenMovingToS7</fullName>
    <active>true</active>
    <description>Main competitor must be defined before moving from S6 to S7.</description>
    <errorConditionFormula>AND($Permission.ByPassVR = false,
    ISPICKVAL(StageName, &quot;7- Business Win&quot;),
    ISPICKVAL(PRIORVALUE(StageName), &quot;6- Preferred Vendor&quot;),
    PrimaryCompetitorDefined__c = 0
)</errorConditionFormula>
    <errorMessage>Main competitor must be defined before moving from S6 to S7.</errorMessage>
</ValidationRule>