force-app/main/default/objects/Opportunity/validationRules/EnsureDecisionMakerFromS3ToS6.validationRule-meta.xml
<ValidationRule>
    <fullName>EnsureDecisionMakerFromS3ToS6</fullName>
    <active>true</active>
    <description>Decision Maker must be filled in when moving from S3 to S6 for Fast Track opportunities.</description>
    <errorConditionFormula>AND($Permission.ByPassVR = false,
    ISPICKVAL(StageName, &quot;6- Preferred Vendor&quot;),
    ISPICKVAL(PRIORVALUE(StageName), &quot;3- Qualified&quot;),
    ISBLANK(DecisionMaker__c)
)</errorConditionFormula>
    <errorMessage>Decision Maker must be filled in when moving from S3 to S6 for Fast Track opportunities.</errorMessage>
</ValidationRule>