force-app/main/default/objects/Opportunity/validationRules/LossReasonDisqualifiedWhenLost.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReasonDisqualifiedWhenLost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.ByPassVR = false,
    ISPICKVAL(StageName, &quot;Lost&quot;),
    ISPICKVAL(PRIORVALUE(StageName), &quot;1- Meeting Done&quot;),
    NOT(ISPICKVAL(LossReason__c, &quot;Disqualified&quot;)),
 NOT(ISPICKVAL(LossReason__c, &quot;Duplicate Opportunity&quot;))
)</errorConditionFormula>
    <errorMessage>When moving from &apos;1- Meeting Done&apos; to &apos;Lost&apos;, the Loss Reason must be &apos;Disqualified&apos;.</errorMessage>
</ValidationRule>