force-app/main/default/objects/Opportunity/validationRules/MainCompetitorDefined.validationRule-meta.xml
<ValidationRule>
    <fullName>MainCompetitorDefined</fullName>
    <active>true</active>
    <description>In Standard process only, a Main competitor is required to move to Stage 6</description>
    <errorConditionFormula>AND( 
$Permission.ByPassVR = false,
RecordType.DeveloperName = &quot;StandardOpportunity&quot;,
ISPICKVAL( StageName, &quot;6- Preferred Vendor&quot;), 
PrimaryCompetitorDefined__c = 0)</errorConditionFormula>
    <errorMessage>In Standard sales process, a main competitor is required to move to Stage 6</errorMessage>
</ValidationRule>