force-app/main/default/objects/Opportunity/validationRules/MandatoryRuleForCoTermField.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryRuleForCoTermField</fullName>
    <active>true</active>
    <description>If Opportunity type is “Upsell” or Cross-sell, then the value of the  &quot;Co-termed&quot;  field becomes mandatory.</description>
    <errorConditionFormula>AND(NOT($Permission.ByPassVR), ISPICKVAL( CoTermed__c , &apos;&apos;),OR( ISPICKVAL( Type , &apos;Cross sell&apos;), ISPICKVAL( Type , &apos;Upsell&apos;)))</errorConditionFormula>
    <errorDisplayField>CoTermed__c</errorDisplayField>
    <errorMessage>Please provide the value</errorMessage>
</ValidationRule>