force-app/main/default/objects/Opportunity/validationRules/ProductMandatoryforStage3.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductMandatoryforStage3</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NumberOfProducts__c = 0,
 ISPICKVAL(StageName, &quot;3- Qualified&quot;),
 $Permission.ByPassVR = false)</errorConditionFormula>
    <errorMessage>At least 1 opportunity product is required to move to Stage 3</errorMessage>
</ValidationRule>