force-app/main/default/objects/Opportunity/validationRules/RequireLostReasonWhenStageIsLost.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireLostReasonWhenStageIsLost</fullName>
    <active>true</active>
    <description>Require_Lost_Reason_When_Stage_Is_Lost</description>
    <errorConditionFormula>AND($Permission.ByPassVR = false,
    ISPICKVAL(StageName, &quot;Lost&quot;),
    ISBLANK(TEXT(LossReason__c))
)</errorConditionFormula>
    <errorMessage>Please select a Loss Reason before saving an opportunity with the stage &apos;Lost&apos;.</errorMessage>
</ValidationRule>