force-app/main/default/objects/Opportunity/validationRules/SdrNameOnlyEditableByOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>SdrNameOnlyEditableByOwner</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Permission.ByPassVR = false, 
ISCHANGED( SDRName__c ), 
 $User.Id &lt;&gt; OwnerId)</errorConditionFormula>
    <errorDisplayField>SDRName__c</errorDisplayField>
    <errorMessage>SDR Name can only be editable by the opportunity owner</errorMessage>
</ValidationRule>